Move documentation from readme to wiki

--- a/readme.org
+++ b/readme.org
@@ -199,331 +199,4 @@
    
 * Extending
 
-** Stumpwm
-
-   Variables ~STUMPBUFFER:*WINDOW-DATA-FIELDS*~,
-   ~STUMPBUFFER:*GROUP-DATA-FIELDS*~ and
-   ~STUMPBUFFER:*FRAME-DATA-FIELDS*~ contain alists of custom data
-   fields to be passed to Emacs. The keys should be keywords and
-   values functions to generate the value. For windows and groups the
-   function takes a single argument, while frame functions should take
-   both the group and the frame (in that order).
-
-   The values should be something that can be printed out, and read by
-   emacs. In other words, stick with keywords, numbers and strings.
-
-** Emacs
-*** Key maps
-
-    ~stumpbuffer-mode-map~ is for keys that are always active in the
-    buffer. ~stumpbuffer-mode-group-map~, ~stumpbuffer-mode-frame-map~
-    and ~stumpbuffer-mode-window-map~ are only active when point is on
-    a group name, frame name or a window respectively.
-   
-*** Marking
-
-    ~stumpbuffer-mark~ and ~stumpbuffer-unmark~ can be used to add or
-    remove mark from the window at point.
-
-    ~stumpbuffer-mark-group~ and ~stumpbuffer-mark-frame~ will add a
-    mark to all windows in the group or frame. They have a
-    corresponding unmark function.
-
-    When adding multiple marks, it's better to use
-    ~stumpbuffer-change-window-mark~. It doesn't have any other
-    side-effects.
-    
-*** Getting information about things at point
-
-    ~stumpbuffer-on-group-name~, ~stumpbuffer-on-frame-name~ and
-    ~stumpbuffer-on-window~ will return a plist with information about
-    the thing at point.
-
-    Each of the plists have keys ~:start~ and ~:end~ containing the
-    character positions of the thing. There is also a key
-    ~<group|frame|window>-plist~ containing the property list
-    retrieved from Stumpwm. Windows and frames also have the key
-    ~:group~ containing the number of the group they're in. Windows
-    may have a key ~:mark~ with the current mark of the window.
-
-*** Custom mark functions
-
-    The variable ~stumpbuffer-mark-functions~ contains an alist of
-    mark characters and functions to call during
-    ~stumpbuffer-execute-marks~. The function should take the window
-    plist as returned by ~stumpbuffer-on-window~.
-    
-*** Iterating groups and windows
-
-    ~stumpbuffer-map-groups~ can be used to apply a function to each
-    group. The function should take a single argument, the plist
-    returned by ~stumpbuffer-on-group-name~. The function will be
-    called with point on the group name. Results of the function are
-    discarded.
-
-    ~stumpbuffer-map-windows~ calls a function on all
-    windows. ~stumpbuffer-map-group-windows~ calls a function on
-    windows in the group the point is
-    on. ~stumpbuffer-map-marked-windows~ calls a function on marked
-    windows.
-
-    All of these have a corresponding macro
-    ~stumpbuffer-do-<something>~.
-   
-*** Filters
-
-    The filter syntax can be extended by adding a function to the list
-    ~stumpbuffer-filter-handlers~. The function should take two
-    arguments:
-
-    1. A filter query (such as ~(:where foo :is bar)~).
-    2. A group or window plist as retrieved from Stumpwm.
-
-    The function should return true if the group or window should be
-    filtered. For example, the ~(:where _ :is _)~ filter is defined as
-
-    #+BEGIN_EXAMPLE
-      (defun sb--where-is-filter-handler (how plist)
-        (pcase how
-          (`(:where ,field :is ,value)
-           (equal value (cl-getf plist field)))))
-
-      (add-to-list 'stumpbuffer-filter-handlers
-                   'sb--where-is-filter-handler)
-    #+END_EXAMPLE
-
-*** Communicating with Stumpwm
-
-    Communication happens through stumpish. ~stumpbuffer-command~ can
-    be used to execute a command. The name will automatically have
-    ~stumpbuffer-~ prepended to it, so the commands on Stumpwm side
-    should have that prefix (alternatively just call stumpish
-    yourself).
-
-    The command should return something that Emacs can ~read~. This
-    will be returned from ~stumpbuffer-command~. 
-
-    There is a simple error handling mechanism. The command can return
-    a two element list ~(:error msg)~, in which case Emacs will
-    ~error~ with the message.
-    
-    Notice that since the communication goes through stumpish, the CL
-    code must use ~MESSAGE~ to return values.
-* Example
-
-  Let's say we want to add some kind of a window tagging
-  feature. We'll use an org-mode like syntax for tags:
-  ~:foo:bar:quux:~. The tags can be used to mark windows with a tag
-  query. The query syntax is also org-mode:ish:
-
-  - ~foo~ :: Match windows with a foo tag.
-  - ~+foo -bar~ :: Match windows with a ~foo~ tag, but no ~bar~ tag.
-  - ~foo-bar+quux~ :: Match ~foo~ and ~quux~ and no ~bar~.
-
-  First, we need to store the tags somehow in Stumpwm. Let's just use
-  a simple weak hash table (with SBCL).
-
-  #+BEGIN_EXAMPLE
-    (defvar *window-tags* (make-hash-table :weakness :key))
-
-    (defun window-tags (window)
-      (gethash window *window-tags* ":")) ;Use : for empty taglist
-
-    (defun (setf window-tags) (new-value window)
-      (setf (gethash window *window-tags*) new-value))
-  #+END_EXAMPLE
-
-  Then we must add the tags to the custom data fields for windows.
-
-  #+BEGIN_EXAMPLE
-    (pushnew (cons :tags 'window-tags) stumpbuffer:*window-data-fields*
-             :test #'equal)
-  #+END_EXAMPLE
-
-  And make a command to set new tags. This has a slight problem of not
-  accepting an empty string through Stumpish. We work around that in
-  Emacs by adding a ~:~ instead of empty tag list.
-  
-  #+BEGIN_EXAMPLE
-    (defcommand stumpbuffer-set-window-tags (window-id new-tags)
-        ((:number "Window- ID")
-         (:string "Tags: "))
-      (stumpbuffer:with-simple-error-handling
-        (let ((window (stumpbuffer:find-window-by-id window-id)))
-          (setf (window-tags window) (or new-tags "")))))
-  #+END_EXAMPLE
-
-  That's all we need on the Stumpwm side, because we're not really
-  interested in doing anything with the tags in Stumpwm itself. For
-  Emacs we have to write a bit more code to manage the tags with.
-
-  First, make the tag field visible.
-
-  #+BEGIN_EXAMPLE
-    (setq stumpbuffer-window-format
-          '((:number 3 "N")
-            (:title 35 "Title")
-            (:class 10 "Class")
-            (:role 10 "Role")
-            (:instance 10 "Instance")
-            (:tags nil "Tags")))
-  #+END_EXAMPLE
-
-  Then add a simple command to edit tags. We'll also bind it to ~t~
-  for window rows only using the ~stumpbuffer-mode-window-map~.
-
-  #+BEGIN_EXAMPLE
-    (defun my-stumpbuffer-set-window-tags (window-id new-tags &optional updatep)
-      (interactive (let ((wplist (cl-getf (stumpbuffer-on-window) :window-plist)))
-                     (list (cl-getf wplist :id)
-                           (read-string "Tags: " (cl-getf wplist :tags))
-                           t)))
-      (when (and window-id new-tags)
-        (stumpbuffer-command "set-window-tags" window-id new-tags)
-        (when updatep
-          (stumpbuffer-update))))
-
-    (define-key stumpbuffer-mode-window-map (kbd "t")
-      'my-stumpbuffer-set-window-tags)
-  #+END_EXAMPLE
-
-  For queries we'll have to write some code to parse the tags and the
-  query strings and match them.
-
-  #+BEGIN_EXAMPLE
-    (defun my-stumpbuffer-parse-query (query)
-      (cl-loop with start-pos = 0
-               for match-pos = (string-match
-                                "\\(\\(?: \\|^\\|\\+\\|-\\)[^ +-]+\\)"
-                                query start-pos)
-               while match-pos
-               collect (let ((match (string-trim (match-string 1 query))))
-                         (cl-case (aref match 0)
-                           (?+ (cons :positive (subseq match 1)))
-                           (?- (cons :negative (subseq match 1)))
-                           (otherwise (cons :positive match))))
-               do (setq start-pos (1+ match-pos))))
-
-    (defun my-stumpbuffer-parse-tags (tags)
-      (cl-loop with start-pos = 0
-               for match-pos = (string-match ":\\([^:]+\\)" tags start-pos)
-               while match-pos
-               collect (match-string 1 tags)
-               do (setq start-pos (1+ match-pos))))
-
-    (defun my-stumpbuffer-match-tags (tags parsed-query)
-      (let ((parsed-tags (my-stumpbuffer-parse-tags tags)))
-        (cl-every (lambda (query-part)
-                    (cl-destructuring-bind (type . tag) query-part
-                      (cl-case type
-                        (:positive (member tag parsed-tags))
-                        (:negative (not (member tag parsed-tags))))))
-                  parsed-query)))
-  #+END_EXAMPLE
-
-  With these it's easy to write a command to mark windows by a tag
-  query. We'll bind it to ~% t~ in the whole buffer.
-
-  #+BEGIN_EXAMPLE
-    (defun my-stumpbuffer-mark-windows-by-tag-query (query mark)
-      (interactive (list (read-string "Query: ")
-                         (if current-prefix-arg
-                             (read-char "Mark: ")
-                           ?*)))
-      (let ((parsed-query (my-stumpbuffer-parse-query query)))
-        (stumpbuffer-do-windows (win)
-          (let ((tags (cl-getf (cl-getf win :window-plist) :tags)))
-            (when (my-stumpbuffer-match-tags tags parsed-query)
-              (stumpbuffer-mark mark))))))
-
-    (define-key stumpbuffer-mode-map (kbd "% t")
-      'my-stumpbuffer-mark-windows-by-tag-query)
-  #+END_EXAMPLE
-
-  Let's also write commands to add or remove a single tag from marked
-  windows (or the highlighted one). Those will be bound to ~+~ and ~-~
-  respectively.
-
-  #+BEGIN_EXAMPLE
-    (defun my-stumpbuffer-concat-tags (tags)
-      (with-output-to-string
-        (write-char ?:)
-        (cl-loop for tag in (cl-remove-duplicates tags :test #'string-equal)
-                 do (princ tag)
-                 (write-char ?:))))
-
-    (defun my-stumpbuffer-add-tag (tag)
-      (interactive (list (string-trim (read-string "Tag: "))))
-      (cl-flet ((try-add-tag (win)
-                             (let* ((wplist (cl-getf win :window-plist))
-                                    (tags (my-stumpbuffer-parse-tags
-                                           (cl-getf wplist :tags))))
-                               (unless (member tag tags)
-                                 (my-stumpbuffer-set-window-tags
-                                  (cl-getf wplist :id)
-                                  (my-stumpbuffer-concat-tags (cons tag tags))
-                                  nil)))))
-        (let (marksp)
-          (stumpbuffer-do-marked-windows (win)
-            (let ((mark (cl-getf win :mark)))
-              (when (char-equal mark ?*)
-                (setq marksp t)
-                (try-add-tag win))))
-          (unless marksp
-            (when-let ((win (stumpbuffer-on-window)))
-              (try-add-tag win)))
-          (stumpbuffer-update))))
-
-    (defun my-stumpbuffer-remove-tag (tag)
-      (interactive (list (string-trim (read-string "Tag: "))))
-      (cl-flet ((try-remove-tag (win)
-                                (let* ((wplist (cl-getf win :window-plist))
-                                       (tags (my-stumpbuffer-parse-tags
-                                              (cl-getf wplist :tags))))
-                                  (when (member tag tags)
-                                    (my-stumpbuffer-set-window-tags
-                                     (cl-getf wplist :id)
-                                     (my-stumpbuffer-concat-tags (remove tag tags))
-                                     nil)))))
-        (let (marksp)
-          (stumpbuffer-do-marked-windows (win)
-            (let ((mark (cl-getf win :mark)))
-              (when (char-equal mark ?*)
-                (setq marksp t)
-                (try-remove-tag win))))
-          (unless marksp
-            (when-let ((win (stumpbuffer-on-window)))
-              (try-remove-tag win)))
-          (stumpbuffer-update))))
-
-    (define-key stumpbuffer-mode-map (kbd "+")
-      'my-stumpbuffer-add-tag)
-
-    (define-key stumpbuffer-mode-map (kbd "-")
-      'my-stumpbuffer-remove-tag)
-  #+END_EXAMPLE
-  
-  Finally we should implement quick filtering based on tag
-  queries. This adds filter syntax for ~(:with-tags parsed-query)~ and
-  binds ~/ t~ to push such quick filter.
-
-  #+BEGIN_EXAMPLE
-    (defun my-stumpbuffer-tag-filter-handler (how plist)
-      (pcase how
-        (`(:with-tags ,query)
-         (when-let ((tags (cl-getf plist :tags)))
-           (my-stumpbuffer-match-tags tags query)))))
-
-    (add-to-list 'stumpbuffer-filter-handlers
-                 'my-stumpbuffer-tag-filter-handler)
-
-    (defun my-stumpbuffer-push-tag-filter (query)
-      (interactive (list (read-string "Query: ")))
-      (let ((query (my-stumpbuffer-parse-query query)))
-        (stumpbuffer-push-quick-filter
-         `(:show-windows :with-tags ,query))
-        (stumpbuffer-update)))
-
-    (define-key stumpbuffer-mode-map (kbd "/ t")
-      'my-stumpbuffer-push-tag-filter)
-  #+END_EXAMPLE
+  See [[https://github.com/juki-pub/stumpbuffer/wiki/Extending][the wiki]].
