--- a/readme.org
+++ b/readme.org
@@ -1,8 +1,6 @@
 * StumpBuffer
 
-  An IBuffer inspired tool to control Stumpwm from Emacs. Still
-  experimental and unstable. Currently does not work with float
-  groups.
+  An IBuffer inspired tool to control Stumpwm from Emacs.
 
   Uses a lot of Stumpwms internals. This can't really be avoided since
   Stumpwm doesn't expose everything for programmatic access. Using the
